cabal-version:       2.4
name:                moon-lift
version:             0.1.0.0
synopsis:            Experiments
homepage:            https://github.com/deepfire/moon
license:             GPL-3.0-only
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            System
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
                       Moon.CLI
                       Moon.Lift
                       Moon.Lift.Haskell
  build-depends:       common

                     , base
                     , algebraic-graphs
                     , binary
                     , bytestring
                     , cborg
                     , containers
                     , contra-tracer
                     , extra
                     , filepath
                     , generic-monoid
                     , ghc
                     , ghc-boot
                     , iohk-monitoring
                     , optparse-applicative
                     , serialise
                     , shelly
                     , text
                     , unagi-chan
                     , websockets
                     , zeromq4-haskell

                     , typed-protocols
                     , typed-protocols-cbor

  hs-source-dirs:      src
  default-language:    Haskell2010

executable moon
  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       moon-lift
                     , base

executable cli
  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             CLI.hs
  build-depends:       moon-lift
                     , base
