cabal-version:       2.4
name:                moon-lift
version:             0.1.0.0
synopsis:            Experiments
homepage:            https://github.com/deepfire/moon
license:             GPL-3.0-only
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            System
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
                       Moon.CLI
                       Moon.Lift
                       Moon.Lift.Haskell
                       Moon.Lift.Hackage
  build-depends:       common

                     , base
                     , algebraic-graphs
                     , binary
                     , bytestring
                     , Cabal
                     , cached-io
                     , cborg
                     , containers
                     , contra-tracer
                     , data-default
                     , extra
                     , filepath
                     , generic-monoid
                     , ghc
                     , ghc-boot
                     , hackage-db
                     , iohk-monitoring
                     , optparse-applicative
                     , process
                     , req
                     , serialise
                     , shelly
                     , text
                     , time
                     , typed-protocols
                     , typed-protocols-cbor
                     , unagi-chan
                     , websockets

                     , zeromq4-haskell
                     
  hs-source-dirs:      src
  default-language:    Haskell2010

executable moon
  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       common
                     , moon-lift
                     , base
                     , containers

executable cli
  default-language:    Haskell2010
  hs-source-dirs:      .
  main-is:             CLI.hs
  build-depends:       moon-lift
                     , base
